setup(naming): rename component

--- a/src/components/00-foundations/colors.mdx
+++ b/src/components/00-foundations/colors.mdx
@@ -17,7 +17,7 @@ import { Meta, Title, Subtitle } from '@storybook/blocks'
  * --------------------------------------------------------------------
  */}
 
-<div style={{display: 'grid', gridTemplateColumns: 'repeat(3, 1fr)'}}>
+<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fill, minmax(300px, 1fr))'}}>
 	
 <div style={{inlineSize: '100%'}}>
 	<h2>Red</h2>
